Add debounce for splice. Fix fat bug in array id value.

--- a/.jshintrc
+++ b/.jshintrc
@@ -11,6 +11,8 @@
     "console": false,
     "module": false,
     "window": false,
-    "document": false
+    "document": false,
+    "clearTimeout": false,
+    "setTimeout": false
   }
 }
