--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "dependencies": {
     "microevent": "^1.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-6to5": "^2.0.0",
+    "gulp-concat": "^2.4.3",
+    "gulp-sourcemaps": "^1.3.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
