Update validity status output on forms in validation example.

--- a/.jshintrc
+++ b/.jshintrc
@@ -15,6 +15,7 @@
     "clearTimeout": false,
     "setTimeout": false,
     "require": false,
-    "HTMLElement": false
+    "HTMLElement": false,
+    "ActiveXObject": false
   }
 }
