Start adding both routing and build system and organize into modules.

--- a/.jshintrc
+++ b/.jshintrc
@@ -16,6 +16,8 @@
     "setTimeout": false,
     "require": false,
     "HTMLElement": false,
-    "ActiveXObject": false
+    "ActiveXObject": false,
+    "Buffer": false,
+    "__dirname": false
   }
 }
