--- a/package.json
+++ b/package.json
@@ -1,33 +1,12 @@
 {
-  "name": "concise",
+  "name": "package",
   "version": "0.0.0",
-  "description": "Next-generation FE framework",
-  "main": "to-do.js",
   "dependencies": {
     "microevent": "^1.0.0"
   },
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-6to5": "^2.0.0",
-    "gulp-concat": "^2.4.3",
-    "gulp-sourcemaps": "^1.3.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rm-rf-etc/concise.git"
-  },
-  "keywords": [
-    "framework",
-    "2-way",
-    "databinding"
-  ],
-  "author": "Rob Christian",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rm-rf-etc/concise/issues"
-  },
-  "homepage": "https://github.com/rm-rf-etc/concise"
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.3.0",
+    "grunt-contrib-connect": "^0.9.0"
+  }
 }
