Big reorganization, combine to-do app with login app.

--- a/.jshintrc
+++ b/.jshintrc
@@ -22,6 +22,8 @@
     "attachEvent": false,
     "onload": false,
     "location": false,
-    "history": false
+    "history": false,
+    "confirm": false,
+    "alert": false
   }
 }
