--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "microevent": "^1.0.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.0.0-rc4",
     "grunt": "^0.4.5",
+    "grunt-browser-sync": "^1.9.1",
     "grunt-browserify": "^3.3.0",
-    "grunt-contrib-connect": "^0.9.0"
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
