Add waiting to router for app-ready. Switch to firebase BE.

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,6 +13,9 @@
     "document": false,
     "clearTimeout": false,
     "setTimeout": false,
+    "clearInterval": false,
+    "setInterval": false,
+    "Firebase": false,
     "require": false,
     "HTMLElement": false,
     "ActiveXObject": false,
