--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "node_modules/app/libs/connected"]
 	path = node_modules/app/libs/connected
 	url = git@github.com:rm-rf-etc/connected.git
+[submodule "node_modules/concise"]
+	path = node_modules/concise
+	url = git@github.com:rm-rf-etc/concise.git
