--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "devDependencies": {
     "browser-sync": "^2.0.0-rc4",
     "grunt": "^0.4.5",
-    "grunt-browser-sync": "^1.9.1",
-    "grunt-browserify": "^3.3.0",
+    "grunt-browser-sync": "^2.1.3",
+    "grunt-browserify": "^4.0.1",
     "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "load-grunt-tasks": "^3.2.0"
   }
 }
